<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="visibility">Visibility</string>
    <string name="humidity_unit">%</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="temperature">Temperature</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fehrenheit">Fehrenheit</string>
    <string name="meterPerSecond">m/s</string>
    <string name="meterPerSecond_settings">meter/second</string>
    <string name="milePerHour">mil/h</string>
    <string name="milePerHour_settings">mile/hour</string>
    <string name="add">Add location</string>
    <string name="dash">/</string>
    <string name="temp_unit_C">°C</string>
    <string name="temp_unit_F">°F</string>
    <string name="temp_unit_K">°K</string>
    <string name="windUnit">m/s</string>
    <string name="unable_to_load_data">Unable to load data..</string>
    <string name="no_connection">"There's no internet connection.."</string>
    <string name="day">day</string>
    <string name="pressure_unit">h.p.a</string>
    <string name="visibility_unit">m</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="chooseLocation">Choose location</string>
    <string name="invalidSelection">Invalid selection</string>
    <string name="chooseAValidTime">Choose a valid time</string>
    <string name="dismiss">Dismiss</string>
    <string name="deleteAlarm">Delete Alarm</string>
    <string name="deleteLocation">Delete Location</string>
    <string name="deleteAlarmDialogMessage">Are you sure you want to delete this alarm?</string>
    <string name="deleteFavoriteDialogMessage">Are you sure you want to delete this location?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>